--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Brutal Hinglish Roast Bot using Gemini API",
   "main": "api/roast.js",
   "dependencies": {
-    "@google/generative-ai": "^0.21.0",
-    "express": "^4.18.2"
+    "@google/generative-ai": "^0.21.0"
   },
   "engines": {
-    "node": "18.x"
+    "node": "24.x"
   }
 }
