--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "judge-ai-roast",
+  "name": "judge-app",
   "version": "1.0.0",
-  "description": "Brutal Hinglish Roast Bot using Gemini API",
-  "main": "api/roast.js",
-  "dependencies": {
-    "@google/generative-ai": "^0.21.0"
-  },
   "engines": {
     "node": "24.x"
+  },
+  "dependencies": {
+    "@google/generative-ai": "^0.21.0"
   }
 }
